# pigeon

./: Cargo.toml  LICENSE  Readme.md  completion.nu  example-posthook.nu  example-prehook.nu  pigeon.toml  qwicket.toml  yoink.toml
.github/workflows/: rust.yml
docs/: readme.md
example-hooks/httpbin/: post.nu  put.nu
services/: httpbin.toml  index.toml  local.toml
services.old/httpbin/: anything.toml  bytes.toml  index.toml
services/httbin/: bytes.toml  index.toml
services/httpbin/: bytes.toml  index.toml
src/: agent.rs  constants.rs  executor.rs  hook.rs  lib.rs  main.bak.rs  main.rs  parser.old.rs  parser.rs  parser2.rs  rest.rs  store.rs
src/agent/: http.old.rs  http.rs  http2.rs  mod.rs
src/registry/: hook.rs  mod.rs  parser.rs
utils/: completion.nu  readme.md  starship.toml  wrapper.nu
