[package]
name = "pigeon"
version = "0.3.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6.3"
dirs = "5.0.1"
http = "1.1.0"
rmp-serde = "1.3.0"
rmpv = "1.3.0"
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
subst = "0.3.3"
thiserror = "1.0.56"
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ureq = { version = "2.9.7", features = ["json"] }
url = "2.5.2"

[dev-dependencies]
tracing-test = "0.2.5"
