[package]
name = "pigeon"
version = "0.4.0"
edition = "2021"
description = "http query management tool for commandline lovers"
license = "GPL-3.0-or-later"
repository = "https://github.com/hardfau1t/pigeon"
homepage = "https://github.com/hardfau1t/pigeon"
documentation = "https://docs.rs/pigeon/latest/pigeon/"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
dirs = "5.0.1"
http = "1.1.0"
miette = { version = "7.2.0", features = ["fancy"] }
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "http2", "charset", "multipart"] }
rmp-serde = "1.3.0"
rmpv = "1.3.0"
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive", "rc"] }
serde_json = "1.0.113"
subst = "0.3.3"
thiserror = "1.0.56"
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"

[dev-dependencies]
tracing-test = "0.2.5"
